# modern_cmake_example

example_exec/: CMakeLists.txt  main.cpp
example_exec/fftutils/include/fftutils/: fftutils.h
example_exec/fftutils/lib/cmake/: FFTUtilsTargets-noconfig.cmake  FFTUtilsTargets.cmake
fftutils/: CMakeLists.txt
fftutils/cmake/: FFTUtilsConfig.cmake
fftutils/src/: fftutils.cpp  helper.cpp  helper.h
